# GodotTransvoxelPlanet

./: .gitignore  README.md  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot  transvoxel_native.gdextension  transvoxel_native.gdextension.uid
animations/: Backwards Rifle Walk.fbx.import  Crouch To Stand-2.fbx.import  Crouch To Stand.fbx.import  Grabbing Ammo.fbx.import  Jump Push Up.fbx.import  Jumping Down-2.fbx.import  Jumping Down-3.fbx.import  Jumping Down-4.fbx.import  Jumping Down.fbx.import  Male Sitting Pose.fbx.import  Run Backwards.fbx.import  Run Forward.fbx.import  Standing Aim Idle 01.fbx.import  Standing Run Forward.fbx.import  Unarmed Idle 01.fbx.import  Unarmed Run Forward.fbx.import  Unarmed Walk Forward.fbx.import  Walk With Rifle.fbx.import
characters/: Master.fbx.import
rust/: Cargo.toml
rust/src/: density.rs  erosion.rs  lib.rs  mesher.rs  noise.rs  scatter.rs  tables.rs
scripts/interior/: interior_generator.gd  interior_generator.gd.uid  interior_layout.gd  interior_layout.gd.uid  room_definition.gd.uid
scripts/planet/: chunk_mesher.gd  chunk_mesher.gd.uid  crater_density.gd  crater_density.gd.uid  density.gd  density.gd.uid  planet.gd  planet.gd.uid  transvoxel_tables.gd  transvoxel_tables.gd.uid  transvoxel_transition_tables.gd  transvoxel_transition_tables.gd.uid  voxel_chunk.gd  voxel_chunk.gd.uid
scripts/player/: character_rig.gd  character_rig.gd.uid  flight_player.gd  flight_player.gd.uid
scripts/player/ik/: aim_controller.gd  aim_controller.gd.uid  (+4 more)
scripts/vehicles/: aircraft.gd  aircraft.gd.uid  car.gd  car.gd.uid
scripts/world/: scatter.gd  scatter.gd.uid  world.gd  world.gd.uid
shaders/: atmosphere.gdshader  atmosphere.gdshader.uid  clouds.gdshader  clouds.gdshader.uid  moon_terrain.gdshader  moon_terrain.gdshader.uid  rock.gdshader  rock.gdshader.uid  stars.gdshader  stars.gdshader.uid  terrain.gdshader  terrain.gdshader.uid  water.gdshader  water.gdshader.uid
(+14 files in other folders)
