[package]
name = "transvoxel_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Noise is hand-rolled (src/noise.rs) — no noise crate.
# gdext 0.4.5 with DEFAULT bindings (Godot 4.4 API) — NOT api-custom. Matching
# the exact 4.7.dev3 binary via api-custom caused version skew (codegen/ffi
# mismatches). Instead we rely on Godot's forward-compatible GDExtension ABI:
# a library built against the 4.4 interface loads and runs in 4.7.dev3, and
# 0.4.5 only calls interface fns (classdb_construct_object2, …) that dev3 still
# provides. No GODOT4_BIN / libclang needed; the bindings are bundled.
# No experimental-threads: meshing runs on an internal std::thread pool that
# never touches the Godot API; all gdext calls (submit/poll/take) are main-thread.
godot = "=0.4.5"

[profile.release]
opt-level = 3
lto = "thin"
# One codegen unit lets LLVM inline across the whole crate (the meshing / noise
# inner loops benefit). NOT `panic = "abort"`: gdext relies on unwinding to catch
# panics at the FFI boundary and surface them as Godot errors instead of killing
# the editor/game.
codegen-units = 1
